# ROBO202_Project

./: frames_2025-11-25_21.47.18.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/description/lib/description/: camera_gate  camera_sub  camera_subscriber  camera_trigger  exe
install/description/share/description/: package.sh  package.xml
install/description/share/description/launch/: gazebo.launch.py  print_val.py
install/description/share/description/urdf/: obstacle.urdf  tricycle.urdf
log/: latest_build
src/description/: package.xml  setup.cfg  setup.py
src/description/description/: camera_logger.py  camera_sub.py
src/description/launch/: gazebo.launch.py  print_val.py
src/description/urdf/: obstacle.urdf  tricycle.urdf
