[develop]
script_dir=$base/lib/description
[install]
install_scripts=$base/lib/description

[metadata]
name = description
version = 0.0.1

[options]
packages = find:
# (no install_requires here)

[options.package_data]
* = urdf/*.urdf, launch/*.py

[options.data_files]
share/description = package.xml
share/description/urdf = urdf/tricycle.urdf urdf/obstacle.urdf
share/description/launch = launch/gazebo.launch.py
